try to fix horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -150,3 +150,32 @@ body{
 .btn:hover{
   background-color: rgba(128, 128, 128, 0.747);
 }
+
+/* card styling (Titlecard) */
+
+.card_list{
+margin-top: 50px;
+margin-bottom: 30px;
+overflow-x: scroll;
+}
+
+.card_list h2{
+  margin-bottom: 8px;
+}
+
+.card_list::-webkit-scrollbar{
+  display: none;
+}
+
+.lists{
+  display: flex;
+  gap: 20px;
+}
+
+.card img{
+  width: 240px;
+  height: 165px;
+  cursor: pointer;
+  border-radius: 4px;
+
+}
